# genomic

./: .gitignore  AlleleSpecific.hpp  CMakeLists.txt  Chromosome.hpp  CnagSampleSet.hpp  CopyNumberValue.hpp  DchipSampleSet.hpp  GenericSampleSet.cpp  GenericSampleSet.hpp  Marker.cpp  Marker.hpp  PicnicSampleSet.hpp  Properties.hpp  README.md  RawSampleSet.hpp  RawSampleSet.special  ReferenceSampleSet.hpp  Sample.cpp  Sample.h  Sample.hpp  SampleSet.cpp  SampleSet.hpp  SampleSets.hpp  Sample_AlleleSpecific_special.h  Segment.hpp  SegmentedSampleSet.hpp  SegmentedSampleSet.special  SegmentedSampleSet_special.hpp  SplitRawSampleSet.hpp  TODO.md  Tree.h  architecture.md  config.h.in  default.nix  genomic.cpp  genomic.h  genomic.hpp  genomic.kdev4  genomic_clean.hpp  genomic_common.cpp  (+6 more)
.kdev4/: genomic.kdev4
archlinux/: PKGBUILD
cmake/Modules/: FindFTGL.cmake  FindLua51.cmake  FindLua52.cmake
command/: CMakeLists.txt  Script.hpp  ScriptGraphic.hpp  command.cpp  graphic.cpp  graphic.hpp  graphic.pkg  graphic_lua.cpp
doc/: cbs.md  cngpld.md  smooth.md
examples/: CMakeLists.txt  treeExample.cpp
graphic/: Area.hpp  CMakeLists.txt  CMakeLists.txt~  GenomicGraph.hpp  Graph.cpp  Graph.hpp  Graph.hpp~  Tween.hpp  Window.cpp  Window.cpp~  Window.hpp  WindowThreaded.hpp  graphic.cpp  graphic.cpp~
lib/: AlleleSpecific.hpp  Chromosome.hpp  GenericSampleSet.cpp  GenericSampleSet.hpp  Marker.cpp  Marker.hpp  NCList.hpp  Properties.hpp  RawSampleSet.hpp  RawSampleSet_special.hpp  ReferenceRawSampleSet.hpp  ReferenceSegmentedSampleSet.hpp  Sample.cpp  Sample.hpp  SampleSet.cpp  SampleSet.hpp  SampleSets.hpp  Segment.hpp  SegmentedSampleSet.hpp  SegmentedSampleSet_special.hpp  SplitRawSampleSet.hpp  SplitRawSampleSet_special.hpp  Tree.hpp  genomic_sort.hpp  global.cpp  global.hpp  logging.cpp  logging.hpp  parse.cpp  parse.hpp  statistics.hpp  typedefs.h
lib/cbs/: CBS.cpp  CBS.hpp  smooth.cpp  smooth.hpp
lib/cngpld/: summarize.cpp  summarize.hpp
src/: cna.cpp  cna.hpp  cna_clean.cpp  cna_clean.hpp  cna_common.cpp  cna_common.hpp  cna_convert.cpp  cna_convert.hpp  cna_filter.cpp  cna_filter.hpp  cna_segment.hpp  cna_sort.hpp  genomic.cpp  genomic_clean.cpp  genomic_clean.hpp  genomic_common.hpp  genomic_convert.cpp  genomic_convert.hpp  genomic_filter.cpp  genomic_filter.hpp
tests/: CMakeLists.txt  FilesDiff.h  FilesDiff.hpp  cbs_compare.R  cbs_compare_more.R  cbs_generate.R  cbs_hybrid_compare.R  cbs_test.cpp  cna_test.cpp  cngpld_generate.R  cngpld_test.cpp  genomicTest.cpp  genomic_test.cpp  nclist_compare.R  nclist_generate.R  nclist_test.cpp  segment_generate.R  smooth_generate.R  smooth_test.cpp  var_test.cpp
tests/data/: .gitignore  asseg1.ans  asseg1.in  cnas1.ans  cnas1.in  cnfilt1.ans  cnfilt1a.in  cnfilt1b.in  cnfilt2.ans  cnfilt2a.in  cnfilt2b.in  cnfilt3.ans  cnfilt3a.in  cnfilt3b.in  cnfilt_tests.r  cngpld_case1_amp_expected.tsv  cngpld_case1_del_expected.tsv  cngpld_case1_input.seg  cngpld_case2_del_expected.tsv  cngpld_case2_input.seg  cngpld_case3_amp_expected.tsv  cngpld_case3_input.seg  cngpld_case4_amp_expected.tsv  cngpld_case4_input.seg  convert1.ans  convert2.ans  iotest_basic.cfg  iotest_basic_as.cfg  iotest_conversion.cfg  mb-250k_cn_2011-03-17.seg.cnag  picnic.snp6.csv  picnic1.ans  picnic1.seg.ans  picnic1a.in  picnic1b.in  picnic1c.in  raw1.in  raw2.cn  ref1.in  ref2.in  (+10 more)
utils/genompy/: CHANGES.txt  README.txt  setup.py
utils/genompy/genompy/: cn.py  gp.py  randomize.py
utils/genompy/genompy/plot/: cn.py
utils/genompy/genompy/tests/: cn_test.py  region_test.py  test.seg  test_cn.py  test_reference.py  test_region.py
